--- a/src/main/resources/static/account.html
+++ b/src/main/resources/static/account.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Банковский счет</title>
-    <script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/levelup/webjars/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/account.js"></script>
-    <link rel="stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/levelup/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
 </head>
 <body>
 
